--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- yes -->
 <!DOCTYPE html>
+
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -26,31 +27,31 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">I liked you from the first moment I saw you.</span><br><br>
-                    <span class="say">Your smile makes me forget all my problems.l</span><br>
-                    <span class="say">I feel so comfortable when I talk to you.</span><br>
-                    <span class="say">Every time I see you, my heart beats faste</span><br>
-                    <span class="say">Your eyes calm me down and make me happy.</span><br>
+                    <span class="say">Happy birthday, Azyan! 🎉</span><br><br>
+                    <span class="say">I wish you a day filled with joy and a year full of wonderful moments.</span><br>
+                    <span class="say">You deserve all the happiness and success in the world.</span><br>
+                    <span class="say">May this new chapter bring you closer to your dreams.</span><br>
+                    <span class="say">Your eyes make me happy.</span><br>
                     <br>
-                    <span class="say">If you only knew, you'd see how much I care.</span><br>
-                    <span class="say">I don’t want much — just one small chance.</span><br>
+                    <span class="say">It's always inspiring to see how thoughtful and kind you are.</span><br>
+                    <span class="say">And I can assure you—you have a kind and gentle soul..</span><br>
                     <span class="say">A chance to show you how important you are to me.</span><br>
-                    <span class="say">I love your kindness, your innocence, everything about you.</span><br>
+                    <span class="say">I'm glad I was able to make a little gift for your special day.</span><br>
                     <br>
-                    <span class="say">You make my day better just by being in it.</span><br>
-                    <span class="say">I’m not just into you — I truly love you.</span><br>
-                    <span class="say">Let this beautiful song be sung to the girl I love</span><br>
-                    <span class="say">I really hope you give me a chance</span><br>
-                    <span class="say">To love you</span><br>
+                    <span class="say">I know I'm late, but I tried.</span><br>
+                    <span class="say">Keep smiling and shining just the way you are.</span><br>
+                    <span class="say">Happy Birthday! 🎂✨</span><br>
+                    <span class="say">Azyan</span><br>
+                    <span class="say">Made by Mustafa</span><br>
                     <br>
-                    <span class="say"><span class="space"></span>-- Yours, the Sun.</span>
+                    <span class="say"><span class="space"></span></span>
                 </div>
             </div>
-            <div id="clock-box">
+            <!-- <div id="clock-box">
                 <a href="https://sunguoqi.com" target="_blank">The stars</a> and <a href="https://sunguoqi.com"
                     target="_blank">the moon</a> have been together for
                 <div id="clock"></div>
-            </div>
+            </div> -->
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
     </div>
