--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Happy birthday, Azyan! 🎉</span><br><br>
+                    <span class="say">Happy birthday, zainab! 🎉</span><br><br>
                     <span class="say">I wish you a day filled with joy and a year full of wonderful moments.</span><br>
                     <span class="say">You deserve all the happiness and success in the world.</span><br>
                     <span class="say">May this new chapter bring you closer to your dreams.</span><br>
@@ -41,7 +41,7 @@
                     <span class="say">I know I'm late, but I tried.</span><br>
                     <span class="say">Keep smiling and shining just the way you are.</span><br>
                     <span class="say">Happy Birthday! 🎂✨</span><br>
-                    <span class="say">Azyan</span><br>
+                    <span class="say">zainab</span><br>
                     <span class="say">Made by Mustafa</span><br>
                     <br>
                     <span class="say"><span class="space"></span></span>
