--- a/index.html
+++ b/index.html
@@ -27,20 +27,24 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Hey Mariam 🌸</span><br><br>
-                        <span class="say">I just want to say… you're really beautiful, inside and out.</span><br>
-                        <span class="say">Every time I talk to you, I feel happier.</span><br>
-                        <span class="say">You have this special way of making people smile.</span><br>
-                        <span class="say">I honestly admire you so much.</span><br>
-                        <span class="say">Even though I've only known you for a short time, I've felt something truly special with you.</span><br>
-                        <br>
-                        <span class="say">I hope we stay friends forever, no matter what happens.</span><br>
-                        <span class="say">You're someone I'm truly glad to know.</span><br>
-                        <span class="say">And I'm lucky to have you in my life.</span><br>
-                        <br>
-                        <span class="say">Keep being the amazing person you are.</span><br>
-                        <span class="say">Mariam</span><br>
-                        <span class="say">From Mustafa</span><br>
+                    <span class="say">Happy birthday, zainab! 🎉</span><br><br>
+                    <span class="say">I wish you a day filled with joy and a year full of wonderful moments.</span><br>
+                    <span class="say">You deserve all the happiness and success in the world.</span><br>
+                    <span class="say">May this new chapter bring you closer to your dreams.</span><br>
+                    <span class="say">Your eyes make me happy.</span><br>
+                    <br>
+                    <span class="say">It's always inspiring to see how thoughtful and kind you are.</span><br>
+                    <span class="say">And I can assure you—you have a kind and gentle soul..</span><br>
+                    <span class="say">A chance to show you how important you are to me.</span><br>
+                    <span class="say">I'm glad I was able to make a little gift for your special day.</span><br>
+                    <br>
+                    <span class="say">I know I'm late, but I tried.</span><br>
+                    <span class="say">Keep smiling and shining just the way you are.</span><br>
+                    <span class="say">Happy Birthday! 🎂✨</span><br>
+                    <span class="say">zainab</span><br>
+                    <span class="say">Made by Mustafa</span><br>
+                    <br>
+                    <span class="say"><span class="space"></span></span>
 
                     <br>
                     <span class="say"><span class="space"></span></span>
