--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <br>
                         <span class="say">Keep being the amazing person you are.</span><br>
                         <span class="say">Mariam</span><br>
-                        <span class="say">From Mustafa</span><br>
+                        <span class="say">From Mustafa.</span><br>
 
                     <br>
                     <span class="say"><span class="space"></span></span>
